src/test/ui/error-codes/E0529.stderr
error[E0529]: expected an array or slice, found `f32`
  --> $DIR/E0529.rs:16:9
   |
LL |         [a, b] => {
   |         ^^^^^^ pattern cannot match with input type `f32`

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0529"
